# Seq_Box

./: .gitignore  README.md  SeqBox.spec  Talquetamab.fasta  build_exe.bat  launch.py  launch_gui.bat  pyproject.toml
clustal-omega-1.2.4-win64/: README.txt  run_clustalo.bat
seqbox/: __init__.py  cli.py
seqbox/alignment/: __init__.py  cluster.py
seqbox/core/: __init__.py  alphabets.py  sequence.py
seqbox/dna/: __init__.py  basic.py  convert.py
seqbox/gui/: __init__.py  main_window.py
seqbox/gui/pages/: __init__.py  align_page.py  base_page.py  dna_page.py  fasta_page.py  history_page.py  protein_page.py  settings_page.py
seqbox/io/: __init__.py  fasta.py
seqbox/protein/: __init__.py  analysis.py  convert.py  property.py
