[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seqbox"
version = "0.4.0"
description = "DNA/蛋白质序列操作工具箱"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Seq_Box Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["bioinformatics", "dna", "protein", "sequence", "fasta"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
gui = ["PyQt6>=6.0", "qtawesome>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "black", "flake8"]

[project.scripts]
seqbox = "seqbox.cli:main"
seqbox-gui = "seqbox.gui.main_window:main"

[project.urls]
Homepage = "https://github.com/seqbox/seqbox"
Repository = "https://github.com/seqbox/seqbox"

[tool.setuptools.packages.find]
where = ["."]
include = ["seqbox*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
